Avstemming overlapp med ny strategi